Fixed typo and added a template for new entries.

--- a/main.html
+++ b/main.html
@@ -6,8 +6,18 @@
 </head>
 <body style="background-color: #0b1017; color: #c3c9d4">
 
-<h1 style="text-align: center">Today i spent learning:</h1>
+<h1 style="text-align: center">Today I spent learning:</h1>
 <h2 style="text-align: center">A simple static website to keep track of my education</h2>
+
+<!-- Template for new entries.
+<p>
+    <h4></h4>
+    <br>
+    <b>Time spent:</b> <i></i>
+    <br>
+    <b>What I made:</b>
+</p>
+-->
 
 <p>
     <h4>2022-06-14:</h4>
@@ -15,6 +25,5 @@
     <b>Time spent:</b> <i>1,5 hours</i>
     <br>
     <b>What I made:</b> <i>Started learning the basics of HTML and made this website.</i>
-</p>
 </body>
 </html>
