Added an external CSS stylesheet, changed title in header and updated the time for 2022-06-14.

--- a/main.html
+++ b/main.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Today I spent learning</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: #0b1017; color: #c3c9d4">
+<body>
 
 <h1 style="text-align: center">Today I spent learning:</h1>
 <h2 style="text-align: center">A simple static website to keep track of my education</h2>
@@ -22,8 +23,8 @@
 <p>
     <h4>2022-06-14:</h4>
     <br>
-    <b>Time spent:</b> <i>1,5 hours</i>
+    <b>Time spent:</b> <i>2,5 hours</i>
     <br>
-    <b>What I made:</b> <i>Started learning the basics of HTML and made this website.</i>
+    <b>What I made:</b> <i>Started learning the basics of HTML/CSS and made this website.</i>
 </body>
 </html>
