Added an entry for 2022-06-15 and edited a template.

--- a/main.html
+++ b/main.html
@@ -16,8 +16,7 @@
     <br>
     <b>Time spent:</b> <i></i>
     <br>
-    <b>What I made:</b>
-</p>
+    <b>What I made:</b> <i></i>
 -->
 
 <p>
@@ -26,5 +25,13 @@
     <b>Time spent:</b> <i>2,5 hours</i>
     <br>
     <b>What I made:</b> <i>Started learning the basics of HTML/CSS and made this website.</i>
+
+<p>
+    <h4>2022-06-15</h4>
+    <br>
+    <b>Time spent:</b> <i>2 hours</i>
+    <br>
+    <b>What I made:</b> <i>Learning HTML/CSS.</i>
+-
 </body>
 </html>
