Added an entry for 2022-06-16, edited styling and template.

--- a/main.html
+++ b/main.html
@@ -1,37 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Today I spent learning</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<header>
 <h1 style="text-align: center">Today I spent learning:</h1>
-<h2 style="text-align: center">A simple static website to keep track of my education</h2>
-
+<h2 style="text-align: center">A simple static website to keep track of my education.</h2>
+</header>
 <!-- Template for new entries.
-<p>
+<section>
     <h4></h4>
-    <br>
-    <b>Time spent:</b> <i></i>
-    <br>
-    <b>What I made:</b> <i></i>
+    <p>
+        <b>Time spent:</b> <i></i>
+    </p>
+    <p>
+        <b>What I made:</b> <i></i>
+    </p>
+</section>
 -->
 
-<p>
+<section>
     <h4>2022-06-14:</h4>
-    <br>
-    <b>Time spent:</b> <i>2,5 hours</i>
-    <br>
-    <b>What I made:</b> <i>Started learning the basics of HTML/CSS and made this website.</i>
+    <p>
+        <b>Time spent:</b> <i>2,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Started learning the basics of HTML/CSS and made this website.</i>
+    </p>
+</section>
 
-<p>
-    <h4>2022-06-15</h4>
-    <br>
-    <b>Time spent:</b> <i>2 hours</i>
-    <br>
-    <b>What I made:</b> <i>Learning HTML/CSS.</i>
--
+<section>
+    <h4>2022-06-15:</h4>
+    <p>
+        <b>Time spent:</b> <i>2 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning HTML/CSS.</i>
+    </p>
+</section>
+
+<section>
+    <h4>2022-06-16:</h4>
+    <p>
+        <b>Time spent:</b> <i>2 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning HTML/CSS. Updated styling of this website.</i>
+    </p>
+</section>
+
 </body>
 </html>
