Added an entry for 2022-06-17.

--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,6 +50,16 @@
     </p>
     <p>
         <b>What I made:</b> <i>Learning HTML/CSS. Updated styling of this website.</i>
+    </p>
+</section>
+
+<section>
+    <h4>2022-06-17:</h4>
+    <p>
+        <b>Time spent:</b> <i>2,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Finished learning HTML on W3Schools. Continuing to learn CSS.</i>
     </p>
 </section>
 
