Added an entry for 2022-06-18.

--- a/main.html
+++ b/main.html
@@ -63,5 +63,16 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-06-18:</h4>
+    <p>
+        <b>Time spent:</b> <i>2 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning CSS.</i>
+    </p>
+</section>
+
+
 </body>
 </html>
