--- a/main.html
+++ b/main.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Today I spent learning</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesmain.css">
 </head>
 <body>
+
+<div class="navbar">
+    <nav><a href="main.html" title="Main page">Main page</a></nav>
+    <nav><a href="resources.html" title="Resources">Resources</a></nav>
+    <nav><a href="about.html" title="Resources">About</a></nav>
+</div>
+
 <header>
-<h1 style="text-align: center">Today I spent learning:</h1>
-<h2 style="text-align: center">A simple static website to keep track of my education.</h2>
+    <h1 style="text-align: center">Today I spent learning</h1>
+    <h2 style="text-align: center">A simple static website to keep track of my education.</h2>
 </header>
 <!-- Template for new entries.
 <section>
@@ -66,10 +74,11 @@
 <section>
     <h4>2022-06-18:</h4>
     <p>
-        <b>Time spent:</b> <i>2 hours</i>
+        <b>Time spent:</b> <i>3 hours</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning CSS.</i>
+        <b>What I made:</b> <i>Learning CSS. Major update to this website: updated styling, added navigation bar and "About" page.
+        section.</i>
     </p>
 </section>
 
