Added an entry for 2022-06-19, changed a header styling.

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
     <nav><a href="about.html" title="Resources">About</a></nav>
 </div>
 
+<!-- TODO: Add dimmed background image to header.-->
 <header class="title">
     <h1>About</h1>
 </header>
