--- a/main.html
+++ b/main.html
@@ -15,7 +15,8 @@
     <nav><a href="about.html" title="Resources">About</a></nav>
 </div>
 
-<header>
+<!-- TODO: Add dimmed background image to header.-->
+<header class="title">
     <h1 style="text-align: center">Today I spent learning</h1>
     <h2 style="text-align: center">A simple static website to keep track of my education.</h2>
 </header>
@@ -82,6 +83,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-06-19:</h4>
+    <p>
+        <b>Time spent:</b> <i>3 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning CSS. Changed header styling for this website.</i>
+    </p>
+</section>
 
 </body>
 </html>
