--- a/resources.html
+++ b/resources.html
@@ -13,6 +13,6 @@
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
 </div>
-
+<!-- TODO: Add learning resources list. -->
 </body>
 </html>
