Fixed typo in 2022-06-18 entry.

--- a/main.html
+++ b/main.html
@@ -78,8 +78,7 @@
         <b>Time spent:</b> <i>3 hours</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning CSS. Major update to this website: updated styling, added navigation bar and "About" page.
-        section.</i>
+        <b>What I made:</b> <i>Learning CSS. Major update to this website: updated styling, added navigation bar and "About" page.</i>
     </p>
 </section>
 
