Updated an entry for 2022-06-19, updated styling and added "Resources" page.

--- a/main.html
+++ b/main.html
@@ -78,17 +78,18 @@
         <b>Time spent:</b> <i>3 hours</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning CSS. Major update to this website: updated styling, added navigation bar and "About" page.</i>
+        <b>What I made:</b> <i>Learning CSS. Major update to this website: updated styling, added navigation bar and
+        "About" page.</i>
     </p>
 </section>
 
 <section>
     <h4>2022-06-19:</h4>
     <p>
-        <b>Time spent:</b> <i>3 hours</i>
+        <b>Time spent:</b> <i>4 hours</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning CSS. Changed header styling for this website.</i>
+        <b>What I made:</b> <i>Learning CSS. Changed styling and added "Resources" page for this website.</i>
     </p>
 </section>
 
