--- a/resources.html
+++ b/resources.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resources</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesresources.css">
 </head>
 <body>
 
@@ -13,6 +14,48 @@
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
 </div>
-<!-- TODO: Add learning resources list. -->
+
+<header class="title">
+    <h1>Resources</h1>
+</header>
+
+<h2 style="text-align: center">This is a list of resources I use for learning.</h2>
+
+<section>
+    <h3>HTML:</h3>
+    <ul title="HTML">
+        <li><a href="https://www.w3schools.com/html/default.asp" title="W3Schools" target="_blank">W3Schools</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML" title="MDN Web Docs" target="_blank">MDN Web
+            Docs</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>CSS:</h3>
+    <ul title="CSS">
+        <li><a href="https://www.w3schools.com/css/default.asp" title="W3Schools" target="_blank">W3Schools</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS" title="MDN Web Docs" target="_blank">MDN Web
+            Docs</a></li>
+    </ul>
+</section>
+
+<section>
+    <h3>JavaScript:</h3>
+    <ul title="JavaScript">
+        <li>javascript.info/learn.javascript.ru:
+            <ul>
+                <li><a href="https://javascript.info/" title="javascript.info" target="_blank">javascript.info</a>
+                    (English version)
+                </li>
+                <li><a href="https://learn.javascript.ru/" title="learn.javascript.ru" target="_blank">learn.javascript.ru</a>
+                    (Russian version)
+                </li>
+            </ul>
+        </li>
+        <li><a href="https://www.w3schools.com/js/default.asp" title="W3Schools" target="_blank">W3Schools</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" title="MDN Web Docs" target="_blank">MDN
+            Web Docs</a></li>
+    </ul>
+</section>
 </body>
 </html>
