--- a/main.html
+++ b/main.html
@@ -93,5 +93,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-06-20:</h4>
+    <p>
+        <b>Time spent:</b> <i>2 hours.</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning CSS.</i>
+    </p>
+</section>
+
 </body>
 </html>
