--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <div class="navbar">
     <nav><a href="main.html" title="Main page">Main page</a></nav>
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
-    <nav><a href="about.html" title="About">About</a></nav>
+    <nav><a href="about.html" title="About" style="background-color: rgb(4, 170, 109)">About</a></nav>
 </div>
 
 <!-- TODO: Add dimmed background image to header.-->
