--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="navbar">
-    <nav><a href="main.html" title="Main page">Main page</a></nav>
+    <nav><a href="main.html" title="Main page" style="background-color: rgb(4, 170, 109)">Main page</a></nav>
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
 </div>
@@ -96,10 +96,10 @@
 <section>
     <h4>2022-06-20:</h4>
     <p>
-        <b>Time spent:</b> <i>2 hours.</i>
+        <b>Time spent:</b> <i>3 hours.</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning CSS.</i>
+        <b>What I made:</b> <i>Learning CSS. Updated styling of this website.</i>
     </p>
 </section>
 
