--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
 
 <div class="navbar">
     <nav><a href="main.html" title="Main page">Main page</a></nav>
-    <nav><a href="resources.html" title="Resources">Resources</a></nav>
+    <nav><a href="resources.html" title="Resources" style="background-color: rgb(4, 170, 109)">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
 </div>
 
