Changed an entry for 2022-06-20, added light theme toggle.

--- a/resources.html
+++ b/resources.html
@@ -6,16 +6,19 @@
     <title>Resources</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesresources.css">
+    <script src="https://kit.fontawesome.com/965e3fb135.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="navbar">
+    <script src="lightTheme.js"></script>
     <nav><a href="main.html" title="Main page">Main page</a></nav>
     <nav><a href="resources.html" title="Resources" style="background-color: rgb(4, 170, 109)">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
+    <i class="fa-solid fa-sun lightThemeIcon" id="lightThemeIcon" onclick="toggleLightTheme()"></i>
 </div>
 
-<header class="title">
+<header class="title" id="title">
     <h1>Resources</h1>
 </header>
 
