--- a/about.html
+++ b/about.html
@@ -6,17 +6,19 @@
     <title>About</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesabout.css">
+    <script src="https://kit.fontawesome.com/965e3fb135.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="navbar">
+    <script src="lightTheme.js"></script>
     <nav><a href="main.html" title="Main page">Main page</a></nav>
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
     <nav><a href="about.html" title="About" style="background-color: rgb(4, 170, 109)">About</a></nav>
+    <i class="fa-solid fa-sun lightThemeIcon" id="lightThemeIcon" onclick="toggleLightTheme()"></i>
 </div>
 
-<!-- TODO: Add dimmed background image to header.-->
-<header class="title">
+<header class="title" id="title">
     <h1>About</h1>
 </header>
 
