--- a/main.html
+++ b/main.html
@@ -6,19 +6,21 @@
     <title>Today I spent learning</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesmain.css">
+    <script src="https://kit.fontawesome.com/965e3fb135.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="navbar">
+    <script src="lightTheme.js"></script>
     <nav><a href="main.html" title="Main page" style="background-color: rgb(4, 170, 109)">Main page</a></nav>
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
+    <i class="fa-solid fa-sun lightThemeIcon" id="lightThemeIcon" onclick="toggleLightTheme()"></i>
 </div>
 
-<!-- TODO: Add dimmed background image to header.-->
-<header class="title">
-    <h1 style="text-align: center">Today I spent learning</h1>
-    <h2 style="text-align: center">A simple static website to keep track of my education.</h2>
+<header class="title" id="title">
+    <h1>Today I spent learning</h1>
+    <h2>A simple website to keep track of my education.</h2>
 </header>
 <!-- Template for new entries.
 <section>
@@ -96,10 +98,10 @@
 <section>
     <h4>2022-06-20:</h4>
     <p>
-        <b>Time spent:</b> <i>3 hours.</i>
+        <b>Time spent:</b> <i>4 hours.</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning CSS. Updated styling of this website.</i>
+        <b>What I made:</b> <i>Learning CSS. Updated styling and added light theme toggle to this website. </i>
     </p>
 </section>
 
