Added an entry for 2022-06-23, changed font size.

--- a/main.html
+++ b/main.html
@@ -22,6 +22,7 @@
     <h1>Today I spent learning</h1>
     <h2>A simple website to keep track of my education.</h2>
 </header>
+
 <!-- Template for new entries.
 <section>
     <h4></h4>
@@ -102,6 +103,16 @@
     </p>
     <p>
         <b>What I made:</b> <i>Learning CSS. Updated styling and added light theme toggle to this website. </i>
+    </p>
+</section>
+
+<section>
+    <h4>2022-06-23:</h4>
+    <p>
+        <b>Time spent:</b> <i>1,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Started doing my another pet-project, a restaurant website.</i>
     </p>
 </section>
 
