Added more meta tags for main page.

--- a/main.html
+++ b/main.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="archhaze24, todayispentlearning, HTML, CSS, JavaScript">
+    <meta name="description" content="A simple website to keep track of my education.">
+    <meta name="author" content="archhaze24">
     <title>Today I spent learning</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="stylesmain.css">
