--- a/main.html
+++ b/main.html
@@ -119,5 +119,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-06-24:</h4>
+    <p>
+        <b>Time spent:</b> <i>4 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning CSS, updated my another pet-project.</i>
+    </p>
+</section>
+
 </body>
 </html>
