Fixed typo, updated an entry for 2022-06-24, changed README.md

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
 <section>
     <p>This website is one of my "pet projects" and designed specially for my needs and my portfolio. However, feel free
-        to use anything from it. The project is under MIT license, which permits usage of the code of this website
+        to use anything from it. The project is under MIT license, which permits usage of the code from this website
         anywhere you want to.
         <br>You can get the source code <a href="https://github.com/archhaze24/todayispentlearning">here on GitHub</a>.
     </p>
