--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="author" content="archhaze24">
     <title>Today I spent learning</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="stylesmain.css">
+    <link rel="stylesheet" href="stylesindex.css">
     <script src="https://kit.fontawesome.com/965e3fb135.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="navbar">
     <script src="lightTheme.js"></script>
-    <nav><a href="main.html" title="Main page" style="background-color: rgb(4, 170, 109)">Main page</a></nav>
+    <nav><a href="index.html" title="Main page" style="background-color: rgb(4, 170, 109)">Main page</a></nav>
     <nav><a href="resources.html" title="Resources">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
     <i class="fa-solid fa-sun lightThemeIcon" id="lightThemeIcon" onclick="toggleLightTheme()"></i>
