--- a/resources.html
+++ b/resources.html
@@ -15,7 +15,7 @@
 
 <div class="navbar">
     <script src="lightTheme.js"></script>
-    <nav><a href="main.html" title="Main page">Main page</a></nav>
+    <nav><a href="index.html" title="Main page">Main page</a></nav>
     <nav><a href="resources.html" title="Resources" style="background-color: rgb(4, 170, 109)">Resources</a></nav>
     <nav><a href="about.html" title="Resources">About</a></nav>
     <i class="fa-solid fa-sun lightThemeIcon" id="lightThemeIcon" onclick="toggleLightTheme()"></i>
