Added an entry for 2022-07-05.

--- a/index.html
+++ b/index.html
@@ -129,5 +129,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-07-05:</h4>
+    <p>
+        <b>Time spent:</b> <i>2 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Finished learning CSS on W3Schools. Continuing to learn JavaScript.</i>
+    </p>
+</section>
+
 </body>
 </html>
