Added an entry for 2022-07-08.

--- a/index.html
+++ b/index.html
@@ -139,5 +139,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-07-08:</h4>
+    <p>
+        <b>Time spent:</b> <i>4 hours 15 minutes</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript, updated my pet-project.</i>
+    </p>
+</section>
+
 </body>
 </html>
