Added an entry for 2022-07-09, updated resources page.

--- a/index.html
+++ b/index.html
@@ -142,10 +142,20 @@
 <section>
     <h4>2022-07-08:</h4>
     <p>
-        <b>Time spent:</b> <i>4 hours 15 minutes</i>
+        <b>Time spent:</b> <i>4,25 hours</i>
     </p>
     <p>
         <b>What I made:</b> <i>Learning JavaScript, updated my pet-project.</i>
+    </p>
+</section>
+
+<section>
+    <h4>2022-07-09:</h4>
+    <p>
+        <b>Time spent:</b> <i>3,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
     </p>
 </section>
 
