--- a/resources.html
+++ b/resources.html
@@ -48,6 +48,9 @@
 <section>
     <h3>JavaScript:</h3>
     <ul title="JavaScript">
+        <li><a href="https://www.udemy.com/course/the-complete-javascript-course/"
+               title="The Complete JavaScript Course 2022: From Zero to Expert!" target="_blank">The Complete JavaScript
+            Course 2022: From Zero to Expert!</a></li>
         <li>javascript.info/learn.javascript.ru:
             <ul>
                 <li><a href="https://javascript.info/" title="javascript.info" target="_blank">javascript.info</a>
@@ -58,7 +61,6 @@
                 </li>
             </ul>
         </li>
-        <li><a href="https://www.w3schools.com/js/default.asp" title="W3Schools" target="_blank">W3Schools</a></li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" title="MDN Web Docs" target="_blank">MDN
             Web Docs</a></li>
     </ul>
