--- a/index.html
+++ b/index.html
@@ -169,5 +169,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-07-11:</h4>
+    <p>
+        <b>Time spent:</b> <i>5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+</section>
+
 </body>
 </html>
