Added an entry for 2022-07-12.

--- a/index.html
+++ b/index.html
@@ -179,5 +179,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-07-12:</h4>
+    <p>
+        <b>Time spent:</b> <i>4 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Practicing HTML and CSS.</i>
+    </p>
+</section>
+
 </body>
 </html>
