Added an entry for 2022-07-14.

--- a/index.html
+++ b/index.html
@@ -189,5 +189,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-07-14:</h4>
+    <p>
+        <b>Time spent:</b> <i>2 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+</section>
+
 </body>
 </html>
