--- a/index.html
+++ b/index.html
@@ -209,5 +209,15 @@
     </p>
 </section>
 
+<section>
+    <h4>2022-07-16:</h4>
+    <p>
+        <b>Time spent:</b> <i>1,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+</section>
+
 </body>
 </html>
