Added notes for 2022-07-18 and TODO.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <h2>A simple website to keep track of my education.</h2>
 </header>
 
+<!--TODO: Add pop-ups with notes -->
+<!--TODO: Add quick navigation -->
+
 <!-- Template for new entries.
 <section>
     <h4></h4>
@@ -237,6 +240,8 @@
     <p>
         <b>What I made:</b> <i>Learning JavaScript.</i>
     </p>
+
+    <!-- Notes: Learned about modern JS: destructuring, spread/rest operator, short-circuiting, nullish coalescing operator, looping arrays and objects and sets   -->
 </section>
 
 </body>
