Updated an entry for 2022-07-18.

--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
 <section>
     <h4>2022-07-18:</h4>
     <p>
-        <b>Time spent:</b> <i>5 hours</i>
+        <b>Time spent:</b> <i>6 hours</i>
     </p>
     <p>
         <b>What I made:</b> <i>Learning JavaScript.</i>
     </p>
 
-    <!-- Notes: Learned about modern JS: destructuring, spread/rest operator, short-circuiting, nullish coalescing operator, looping arrays and objects and sets   -->
+    <!-- Notes: Learned about modern JS: destructuring, spread/rest operator, short-circuiting, nullish coalescing operator, looping arrays and objects, sets and maps. -->
 </section>
 
 </body>
