Added an entry for 2022-07-19.

--- a/index.html
+++ b/index.html
@@ -244,5 +244,16 @@
     <!-- Notes: Learned about modern JS: destructuring, spread/rest operator, short-circuiting, nullish coalescing operator, looping arrays and objects, sets and maps. -->
 </section>
 
+<section>
+    <h4>2022-07-19:</h4>
+    <p>
+        <b>Time spent:</b> <i>5,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript</i>
+    </p>
+    <!-- Notes: Learned about most of the strings methods and about advanced functions properties/usages: first-class and higher-order functions, callbacks, call, apply and bind methods, IIFEs and closures. -->
+</section>
+
 </body>
 </html>
