Added an entry for 2022-07-20, fixed typo in 2022-07-19.

--- a/index.html
+++ b/index.html
@@ -250,9 +250,20 @@
         <b>Time spent:</b> <i>5,5 hours</i>
     </p>
     <p>
-        <b>What I made:</b> <i>Learning JavaScript</i>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
     </p>
     <!-- Notes: Learned about most of the strings methods and about advanced functions properties/usages: first-class and higher-order functions, callbacks, call, apply and bind methods, IIFEs and closures. -->
+</section>
+
+<section>
+    <h4>2022-07-20:</h4>
+    <p>
+        <b>Time spent:</b> <i>7 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Learned about most of the array methods and practiced them. -->
 </section>
 
 </body>
