Added an entry for 2022-07-21.

--- a/index.html
+++ b/index.html
@@ -266,5 +266,16 @@
     <!-- Notes: Learned about most of the array methods and practiced them. -->
 </section>
 
+<section>
+    <h4>2022-07-21:</h4>
+    <p>
+        <b>Time spent:</b> <i>4 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Practiced more array methods, learned about numbers methods (Math), dates and internalization of dates. -->
+</section>
+
 </body>
 </html>
