Added an entry for 2022-07-22.

--- a/index.html
+++ b/index.html
@@ -277,5 +277,16 @@
     <!-- Notes: Practiced more array methods, learned about numbers methods (Math), dates and internalization of dates. -->
 </section>
 
+<section>
+    <h4>2022-07-22:</h4>
+    <p>
+        <b>Time spent:</b> <i>5,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Learned about internalization of numbers, timers/intervals, and more about advanced DOM (event propagation and traversing) -->
+</section>
+
 </body>
 </html>
