Added an entry for 2022-07-23.

--- a/index.html
+++ b/index.html
@@ -288,5 +288,16 @@
     <!-- Notes: Learned about internalization of numbers, timers/intervals, and more about advanced DOM (event propagation and traversing) -->
 </section>
 
+<section>
+    <h4>2022-07-23:</h4>
+    <p>
+        <b>Time spent:</b> <i>1,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Nodes: Practicing advanced DOM and Codewars challenges. -->
+</section>
+
 </body>
 </html>
