Added an entry for 2022-07-25.

--- a/index.html
+++ b/index.html
@@ -299,5 +299,16 @@
     <!-- Nodes: Practicing advanced DOM and Codewars challenges. -->
 </section>
 
+<section>
+    <h4>2022-07-25:</h4>
+    <p>
+        <b>Time spent:</b> <i>2,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Learned about intersection observer and practiced it more.  -->
+</section>
+
 </body>
 </html>
