Added an entry for 2022-07-26.

--- a/index.html
+++ b/index.html
@@ -310,5 +310,16 @@
     <!-- Notes: Learned about intersection observer and practiced it more.  -->
 </section>
 
+<section>
+    <h4>2022-07-26:</h4>
+    <p>
+        <b>Time spent:</b> <i>4,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Was practicing advanced DOM and started learning basics of OOP in JavaScript: constructors, new operator, prototypes, classes, setters, getters and static methods. -->
+</section>
+
 </body>
 </html>
