Added an entry for 2022-07-27.

--- a/index.html
+++ b/index.html
@@ -321,5 +321,16 @@
     <!-- Notes: Was practicing advanced DOM and started learning basics of OOP in JavaScript: constructors, new operator, prototypes, classes, setters, getters and static methods. -->
 </section>
 
+<section>
+    <h4>2022-07-27:</h4>
+    <p>
+        <b>Time spent:</b> <i>1,75 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Was practicing LeetCode challenges and learned about Object.create and inheritance between classes constructor functions  -->
+</section>
+
 </body>
 </html>
