Added an entry for 2022-07-28.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,18 @@
     <p>
         <b>What I made:</b> <i>Learning JavaScript.</i>
     </p>
-    <!-- Notes: Was practicing LeetCode challenges and learned about Object.create and inheritance between classes constructor functions  -->
+    <!-- Notes: Was practicing LeetCode challenges and learned about Object.create and inheritance in constructor functions  -->
+</section>
+
+<section>
+    <h4>2022-07-28:</h4>
+    <p>
+        <b>Time spent:</b> <i>4 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Was practicing OOP and learned about inheritance in ES6 classes and Object.create, private/public fields/methods, chaining classes methods and browser geolocation.   -->
 </section>
 
 </body>
