Added an entry for 2022-07-30. Added books to resources page.

--- a/index.html
+++ b/index.html
@@ -343,5 +343,17 @@
     <!-- Notes: Was practicing OOP and learned about inheritance in ES6 classes and Object.create, private/public fields/methods, chaining classes methods and browser geolocation.   -->
 </section>
 
+<section>
+    <h4>2022-07-30:</h4>
+    <p>
+        <b>Time spent:</b> <i>6 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript. Started to read Andrey Stolyarov's book "Programming: an
+        introduction to the profession".</i>
+    </p>
+    <!-- Notes: Was practicing OOP. Also learned about Leaflet library and localstorage API. -->
+</section>
+
 </body>
 </html>
