--- a/resources.html
+++ b/resources.html
@@ -66,5 +66,25 @@
     </ul>
 </section>
 
+<section>
+    <h3>Other:</h3>
+    <ul title="Other">
+        <li>
+            <h3>Books:</h3>
+            <ul title="Books">
+                <li>
+                    <a href="https://github.com/cjbt/Free-Algorithm-Books/blob/master/book/Grokking%20Algorithms%20-%20An%20illustrated%20guide%20for%20programmers%20and%20other%20curious%20people.pdf"
+                       title="Grokking Algorithms: An Illustrated Guide for Programmers and Other Curious People"
+                       target="_blank">Aditya Bhargava, "Grokking Algorithms: An Illustrated Guide for Programmers and
+                        Other Curious People"</a></li>
+                <li><a href="http://stolyarov.info/books/programming_intro/e2"
+                       title="Программирование: введение в профессию (Programming: an introduction to the profession)"
+                       target="_blank">Андрей Викторович Столяров, "Программирование: введение в профессию" <br>(available
+                    only on russian language)</a></li>
+            </ul>
+        </li>
+    </ul>
+</section>
+
 </body>
 </html>
