Added an entry for 2022-08-01.

--- a/index.html
+++ b/index.html
@@ -355,5 +355,16 @@
     <!-- Notes: Was practicing OOP. Also learned about Leaflet library and localstorage API. -->
 </section>
 
+<section>
+    <h4>2022-08-01:</h4>
+    <p>
+        <b>Time spent:</b> <i>4,5 hours</i>
+    </p>
+    <p>
+        <b>What I made:</b> <i>Learning JavaScript.</i>
+    </p>
+    <!-- Notes: Learned about basic asynchronous JS features, AJAX and API, XMLHttpRequest, fetches/promises, throw/catch and callback hell.   -->
+</section>
+
 </body>
 </html>
